Booki logo alignement correction

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
 #Booki {
     display: flex;
     padding: 30px 50px;
+    padding-left: unset;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
